--- a/dokuwiki-yearbox.style.css
+++ b/dokuwiki-yearbox.style.css
@@ -5,6 +5,42 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   /* font-family: Tahoma; */
 }
+.icalyearbox .triangle1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  background-image: url(triangle1-background.svg);
+}
+.icalyearbox .triangle2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  background-image: url(triangle2-background.svg);
+}
+.icalyearbox .booking-free {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  background-color: #1fff8f60;
+}
+.icalyearbox .booking-reserved {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  background-color: #fca77d60;
+}
 .icalyearbox table {
   border-width: 1px;
   border-spacing: 2px;
@@ -22,14 +58,15 @@
 }
 .icalyearbox table th {
   border-width: 1px;
-  padding: 2px 3px;
+  /*padding: 2px 3px;*/
   border-style: solid solid solid solid;
   border-color: #BFBFBF;
   background-color: #F0F5F7;
   text-align: center;
   color: #666666;
-  width: 14px;
-  height: 14px;
+  padding: 0;
+  width: 19px;
+  height: 18px;
 }
 .icalyearbox table th.wkend {
   background-color: #D6DBEA;
@@ -42,12 +79,13 @@
 }
 .icalyearbox table td {
   border-width: 1px;
-  padding: 1px 4px;
+  /*padding: 1px 4px;*/
   border-style: solid solid solid solid;
   border-color: #BFBFBF;
   background-color: white;
-  width: 14px;
-  height: 14px;
+  padding: 0;
+  width: 19px;
+  height: 18px;
 }
 .icalyearbox table td.wkend {
   background-color: #EAF0F0;
@@ -56,7 +94,7 @@
   background-color: #CDD2E2;
 }
 .icalyearbox table td.today {
-  background-color: #FAEAC9;
+  background-color: #ffea70;
 }
 .icalyearbox table td:hover {
   background-color: #CDD2E2;
@@ -72,6 +110,22 @@
   background: none;
   height: 5px;
 }
+.icalyearbox table div.cellc {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.icalyearbox table div.linkc {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .icalyearbox table a.link1 {
   border-bottom: 0 !important;
   color: #238fcd !important;
@@ -79,6 +133,6 @@
 }
 .icalyearbox table a.link2 {
   border-bottom: 0 !important;
-  color: #fca77d !important;
+  color: #ff894e !important;
   text-decoration: none;
 }
