--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -130,8 +130,10 @@
 
     div.cellc {
       position: relative;
+      /*
       width: @cell-width;
       height: @cell-height;
+      */
     }
     
     div.linkc {
