--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,10 @@
 }
 .icalyearbox table div.cellc {
   position: relative;
-  width: 18px;
-  height: 16px;
+  /*
+      width: @cell-width;
+      height: @cell-height;
+      */
 }
 .icalyearbox table div.linkc {
   position: absolute;
