--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,4 +1,4 @@
-@cell-width: 18px;
+@cell-width: 21px;
 @cell-height: 16px;
 
 .icalyearbox {
@@ -130,8 +130,8 @@
 
     div.cellc {
       position: relative;
-      width: @cell-width;
-      height: @cell-height;
+      width: 100%;
+      height: 100%;
     }
     
     div.linkc {
