--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,8 @@
 }
 .icalyearbox table div.cellc {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 21px;
+  height: 16px;
 }
 .icalyearbox table div.linkc {
   position: absolute;
