--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -130,8 +130,8 @@
 
     div.cellc {
       position: relative;
-      width: 100%;
-      height: 100%;
+      width: @cell-width;
+      height: @cell-height;
     }
     
     div.linkc {
