--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -3,6 +3,7 @@
   overflow-x: auto;
   font-size: 12px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: normal;
 
   table {
     border-width: 1px;
@@ -12,6 +13,7 @@
     border-collapse: collapse;
     background-color: white;
     margin: 0 auto;
+    box-sizing: unset;
 
     &.left {
       float: left;
@@ -22,6 +24,8 @@
     }
 
     tr {
+      box-sizing: unset;
+
       &.yr-header {
         border-color: #D8D8D8;
         border-bottom: 2px solid #BFBFBF;
@@ -34,10 +38,51 @@
       }
     }
 
+    th {
+      border: 1px solid #BFBFBF;
+      height: 100%;
+      padding: 0;
+      text-align: center;
+      box-sizing: unset;
+
+      & .cellc {
+        background-color: #F0F5F7;
+        width: 100%;
+        height: 18px;
+        top: 0px;
+        left: 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        box-sizing: unset;
+      }
+
+      & .wkend {
+        background-color: #D6DBEA;
+      }
+
+      & .alt {
+        background-color: #D6DBEA;
+      }
+
+      & .plain {
+        background: none;
+      }
+
+      & .cellc .yr-span {
+        margin-left: 6px;
+        margin-right: 6px;
+      }
+    }
+
     td {
       width: 16px;
       position: relative;
       border: 1px solid #BFBFBF;
+      padding: 0 1px 0 1px;
+      text-align: center;
+      box-sizing: unset;
 
       &:after {
         content: '';
@@ -51,10 +96,16 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background: #4EC5F180;
+        /*background: #4EC5F180;*/
         display: flex;
         justify-content: center;
         align-items: center;
+        box-sizing: unset;
+      }
+
+      & .cellc:after,
+      & .cellc:before {
+        box-sizing: unset;
       }
 
       & .wkend {
@@ -74,40 +125,165 @@
       }
     }
 
-    th {
-      border: 1px solid #BFBFBF;
-      height: 100%;
-      padding: 0;
-      margin: 0;
-
-      & .cellc {
-        background-color: #F0F5F7;
-        width: 100%;
-        height: 18px;
-        top: 0px;
-        left: 0px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-      }
-
-      & .wkend {
-        background-color: #D6DBEA;
-      }
-
-      & .alt {
-        background-color: #D6DBEA;
-      }
-
-      & .plain {
-        background: none;
-      }
-
-      & .cellc .pad {
-        margin-left: 6px;
-        margin-right: 6px;
-      }
+    a.link {
+      border-bottom: 0 !important;
+      color: #00000080 !important;
+      text-decoration: none;
+      box-sizing: unset;
     }
+  }
+
+  .reset-this {
+    animation: none;
+    animation-delay: 0;
+    animation-direction: normal;
+    animation-duration: 0;
+    animation-fill-mode: none;
+    animation-iteration-count: 1;
+    animation-name: none;
+    animation-play-state: running;
+    animation-timing-function: ease;
+    backface-visibility: visible;
+    background: 0;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: transparent;
+    background-image: none;
+    background-origin: padding-box;
+    background-position: 0 0;
+    background-position-x: 0;
+    background-position-y: 0;
+    background-repeat: repeat;
+    background-size: auto auto;
+    border: 0;
+    border-style: none;
+    border-width: medium;
+    border-color: inherit;
+    border-bottom: 0;
+    border-bottom-color: inherit;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-style: none;
+    border-bottom-width: medium;
+    border-collapse: separate;
+    border-image: none;
+    border-left: 0;
+    border-left-color: inherit;
+    border-left-style: none;
+    border-left-width: medium;
+    border-radius: 0;
+    border-right: 0;
+    border-right-color: inherit;
+    border-right-style: none;
+    border-right-width: medium;
+    border-spacing: 0;
+    border-top: 0;
+    border-top-color: inherit;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top-style: none;
+    border-top-width: medium;
+    bottom: auto;
+    box-shadow: none;
+    box-sizing: content-box;
+    caption-side: top;
+    clear: none;
+    clip: auto;
+    color: inherit;
+    columns: auto;
+    column-count: auto;
+    column-fill: balance;
+    column-gap: normal;
+    column-rule: medium none currentColor;
+    column-rule-color: currentColor;
+    column-rule-style: none;
+    column-rule-width: none;
+    column-span: 1;
+    column-width: auto;
+    content: normal;
+    counter-increment: none;
+    counter-reset: none;
+    cursor: auto;
+    direction: ltr;
+    display: inline;
+    empty-cells: show;
+    float: none;
+    font: normal;
+    font-family: inherit;
+    font-size: medium;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    height: auto;
+    hyphens: none;
+    left: auto;
+    letter-spacing: normal;
+    line-height: normal;
+    list-style: none;
+    list-style-image: none;
+    list-style-position: outside;
+    list-style-type: disc;
+    margin: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    max-height: none;
+    max-width: none;
+    min-height: 0;
+    min-width: 0;
+    opacity: 1;
+    orphans: 0;
+    outline: 0;
+    outline-color: invert;
+    outline-style: none;
+    outline-width: medium;
+    overflow: visible;
+    overflow-x: visible;
+    overflow-y: visible;
+    padding: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    page-break-after: auto;
+    page-break-before: auto;
+    page-break-inside: auto;
+    perspective: none;
+    perspective-origin: 50% 50%;
+    position: static;
+    /* May need to alter quotes for different locales (e.g fr) */
+    quotes: '\201C' '\201D' '\2018' '\2019';
+    right: auto;
+    tab-size: 8;
+    table-layout: auto;
+    text-align: inherit;
+    text-align-last: auto;
+    text-decoration: none;
+    text-decoration-color: inherit;
+    text-decoration-line: none;
+    text-decoration-style: solid;
+    text-indent: 0;
+    text-shadow: none;
+    text-transform: none;
+    top: auto;
+    transform: none;
+    transform-style: flat;
+    transition: none;
+    transition-delay: 0s;
+    transition-duration: 0s;
+    transition-property: none;
+    transition-timing-function: ease;
+    unicode-bidi: normal;
+    vertical-align: baseline;
+    visibility: visible;
+    white-space: normal;
+    widows: 0;
+    width: auto;
+    word-spacing: normal;
+    z-index: auto;
+    /* basic modern patch */
+    all: initial;
+    all: unset;
   }
 }
