--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -106,7 +106,8 @@
     }
 
     td {
-      width: @td-width;
+      width: 18px;
+      height: 18px;
       position: relative;
       border: 1px solid #BFBFBF;
       padding: 0 1px 0 1px;
@@ -119,7 +120,7 @@
         margin-top: 100%;
       }
 
-      &.blank {
+      &.hidden {
         background-color: transparent;
         border: 1px solid transparent;
         visibility: hidden;
@@ -157,10 +158,6 @@
 
       &:hover {
         background-color: #CDD2E2;
-      }
-
-      &.no-hover:hover {
-        background-color: transparent;
       }
     }
 
