--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -136,6 +136,7 @@
         justify-content: center;
         align-items: center;
         box-sizing: unset;
+        color: #00000080 !important;
       }
 
       & .cellc:after,
@@ -155,17 +156,23 @@
         background-color: #ffea70;
       }
 
+      /*
       &:hover {
         background-color: #CDD2E2;
       }
+      */
     }
 
     a.link {
       border-bottom: 0 !important;
-      color: #00000080 !important;
+      /*color: #00000080 !important;*/
       text-decoration: none;
       box-sizing: unset;
     }
+  }
+
+  .icalyearbox-hint {
+    border-bottom: 1px dotted black;
   }
 }
 
