--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,11 @@
   padding: 0 1px 0 1px;
   text-align: center;
   box-sizing: unset;
+  /*
+      &:hover {
+        background-color: #CDD2E2;
+      }
+      */
 }
 .icalyearbox table td:after {
   content: '';
@@ -114,6 +119,7 @@
   justify-content: center;
   align-items: center;
   box-sizing: unset;
+  color: #00000080 !important;
 }
 .icalyearbox table td .cellc:after,
 .icalyearbox table td .cellc:before {
@@ -128,14 +134,14 @@
 .icalyearbox table td .today {
   background-color: #ffea70;
 }
-.icalyearbox table td:hover {
-  background-color: #CDD2E2;
-}
 .icalyearbox table a.link {
   border-bottom: 0 !important;
-  color: #00000080 !important;
+  /*color: #00000080 !important;*/
   text-decoration: none;
   box-sizing: unset;
+}
+.icalyearbox .icalyearbox-hint {
+  border-bottom: 1px dotted black;
 }
 .icalyearbox-reset-this {
   animation: none;
