--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,3 +1,11 @@
+/**
+ * Wordpress Plugin Icalyearbox (LESS/CSS Component)
+ *
+ * @license MIT https://en.wikipedia.org/wiki/MIT_License
+ * @author  Kai Thoene <k.git.thoene@gmx.net>
+ */
+
+
 @font-size: 12px;
 @td-width: 16px;
 
