--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,9 +146,49 @@
   text-decoration: none;
   box-sizing: unset;
 }
-.yetanotherwpicalcalendar .yetanotherwpicalcalendar-hint {
+.yetanotherwpicalcalendar .pointer {
+  cursor: pointer;
+}
+.yetanotherwpicalcalendar .yetanotherwpicalcalendar-tooltip {
   cursor: pointer;
   border-bottom: 1px dotted black;
+}
+.yetanotherwpicalcalendar-annotation {
+  /* Safari */
+}
+.yetanotherwpicalcalendar-annotation .loader {
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 2s linear infinite;
+  /* Safari */
+  animation: spin 2s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.yetanotherwpicalcalendar-annotation img.wastebasket {
+  cursor: pointer;
+  width: 1em;
+  height: 1em;
+}
+.yetanotherwpicalcalendar-annotation .pointer {
+  cursor: pointer;
 }
 /* SEE:https://github.com/ytiurin/html5tooltipsjs */
 .html5tooltip-box {
