--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,20 @@
     transform: rotate(360deg);
   }
 }
+.yetanotherwpicalcalendar-annotation table {
+  border-width: 0px;
+  border-collapse: collapse;
+  margin: 0;
+  box-sizing: unset;
+  border: none;
+}
+.yetanotherwpicalcalendar-annotation table tr {
+  border-bottom: 1px dotted #ccc;
+}
+.yetanotherwpicalcalendar-annotation table tr th,
+.yetanotherwpicalcalendar-annotation table tr td {
+  padding: 0 0.2em 0 0.2em;
+}
 .yetanotherwpicalcalendar-annotation img.wastebasket {
   cursor: pointer;
   width: 1em;
@@ -189,6 +203,40 @@
 }
 .yetanotherwpicalcalendar-annotation .pointer {
   cursor: pointer;
+}
+.yetanotherwpicalcalendar-annotation-modal {
+  padding: 0;
+}
+.yetanotherwpicalcalendar-annotation-modal .grow-wrap {
+  /* Grow Wrap. SEE:https://codepen.io/chriscoyier/pen/XWKEVLy */
+  /* easy way to plop the elements on top of each other and have them both sized based on the tallest one's height */
+  display: grid;
+  height: 10.2em;
+}
+.yetanotherwpicalcalendar-annotation-modal .grow-wrap::after {
+  /* Note the weird space! Needed to preventy jumpy behavior */
+  content: attr(data-replicated-value) " ";
+  /* This is how textarea text behaves */
+  white-space: pre-wrap;
+  /* Hidden from view, clicks, and screen readers */
+  visibility: hidden;
+}
+.yetanotherwpicalcalendar-annotation-modal .grow-wrap > textarea {
+  /* You could leave this, but after a user resizes, then it ruins the auto sizing */
+  resize: none;
+  /* Firefox shows scrollbar on growth, you can hide like this. */
+  overflow: hidden;
+  max-width: none;
+  width: none;
+  margin: none;
+}
+.yetanotherwpicalcalendar-annotation-modal .grow-wrap > textarea,
+.yetanotherwpicalcalendar-annotation-modal .grow-wrap::after {
+  /* Identical styling required!! */
+  padding: 0.5rem;
+  font: inherit;
+  /* Place on top of each other */
+  grid-area: 1 / 1 / 2 / 2;
 }
 /* SEE:https://github.com/ytiurin/html5tooltipsjs */
 .html5tooltip-box {
