--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -196,19 +196,46 @@
     border-top: 4px solid #3498db;
     width: 20px;
     height: 20px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
     animation: spin 2s linear infinite;
   }
-  
+
   /* Safari */
   @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+    0% {
+      -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+      -webkit-transform: rotate(360deg);
+    }
   }
-  
+
   @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  table {
+    border-width: 0px;
+    border-collapse: collapse;
+    margin: 0;
+    box-sizing: unset;
+    border: none;
+
+    tr {
+      border-bottom: 1px dotted #ccc;
+
+      th, td {
+        padding: 0 0.2em 0 0.2em;
+      }
+    }
   }
 
   img.wastebasket {
@@ -219,6 +246,51 @@
 
   .pointer {
     cursor: pointer;
+  }
+}
+
+.yetanotherwpicalcalendar-annotation-modal {
+  padding: 0;
+
+  .grow-wrap {
+    /* Grow Wrap. SEE:https://codepen.io/chriscoyier/pen/XWKEVLy */
+    /* easy way to plop the elements on top of each other and have them both sized based on the tallest one's height */
+    display: grid;
+    height: 10.2em;
+  }
+
+  .grow-wrap::after {
+    /* Note the weird space! Needed to preventy jumpy behavior */
+    content: attr(data-replicated-value) " ";
+
+    /* This is how textarea text behaves */
+    white-space: pre-wrap;
+
+    /* Hidden from view, clicks, and screen readers */
+    visibility: hidden;
+  }
+
+  .grow-wrap>textarea {
+    /* You could leave this, but after a user resizes, then it ruins the auto sizing */
+    resize: none;
+
+    /* Firefox shows scrollbar on growth, you can hide like this. */
+    overflow: hidden;
+
+    max-width: none;
+    width: none;
+    margin: none;
+  }
+
+  .grow-wrap>textarea,
+  .grow-wrap::after {
+    /* Identical styling required!! */
+    //border: 1px solid black;
+    padding: 0.5rem;
+    font: inherit;
+
+    /* Place on top of each other */
+    grid-area: 1 / 1 / 2 / 2;
   }
 }
 
